# geometry2025

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  geometry25.05.cpp
.ci/: ci.yaml
doc/: algorithms.dox
doc/algorithms/: Convex_intersection.dox  Sutherland-Hodgman_Algorithm.txt  alg_graham.dox  check_convex.dox  convex_hull.dox  cyrus_beck.dox  dimcirus.dox  graham_scan.dox  monotone_polygone_triangulation.docx  monotone_polygone_triangulation.dox  monotone_polygone_triangulation.dox   my_polig.dox  shell_merge.dox  sutherland_hodgman.docs  sutherland_hodgman.dox  sutherland_hogman.txt
include/: alg_graham.hpp  angle_point_in_polygon.hpp  check_convex.hpp  clip_algorithm.hpp  closest_pair_impl.hpp  convex_hull_graham.hpp  convex_intersection.hpp  convex_polygon_intersection.hpp  cyrus_beck.hpp  dimcirus.hpp  gift_wrapping.hpp  graham_scan.hpp  half_plane.hpp  monotone_polygone_triangulation.hpp  my_polig.hpp  point.hpp  polygon_impl.hpp  shell_merge.hpp  sutherland_hodgman.hpp  voronoi_polygon.hpp
methods/: alg_graham_method.cpp  angle_point_in_polygon_method.cpp  check_convex_method.cpp  closest_pair_method.cpp  convex_hull_method.cpp  convex_intersection_method.cpp  convex_polygon_intersection.cpp  cyrus_beck_method.cpp  cyrus_bek_method.cpp  dimcirus_method.cpp  gift_wrapping_method.cpp  graham_scan_method.cpp  main.cpp  methods.hpp  monotone_polygone_triangulation_method.cpp  monotone_polygone_triangulation_method.hpp  my_polig_method.cpp  shell_merge_method.cpp  sutherland_hodgman_method.cpp  voronoi_polygon_method.cpp
tests/: alg_graham_test.cpp  angle_point_in_polygon_test.cpp  check_convex_test.cpp  closest_pair_test.cpp  convex_hull_test.cpp  convex_intersection_test.cpp  convex_polygon_intersection_test.cpp  cyrus_beck_test.cpp  dimcirus_test.cpp  gift_wrapping_test.cpp  graham_scan_test.cpp  insertion_sort_test.cpp  main.cpp  monotone_p_triang_test.hpp  monotone_polygone_triangulation_test.cpp  monotone_polygone_triangulation_test.hpp  my_polig_test.cpp  orientation_test.cpp  point_test.cpp  polygon_test.cpp  shell_merge_test.cpp  sutherland_hodgman_test.cpp  test.hpp  voronoi_polygon_test.cpp
